Fix z-index issue with filter dropdown

--- a/src/assets/styles/views/entry/_overview.scss
+++ b/src/assets/styles/views/entry/_overview.scss
@@ -47,7 +47,7 @@
     position: absolute;
     width: 100%;
     top: 85%;
-    z-index: 100;
+    z-index: 1000;
     padding: 20px;
   }
   &--filter {
